--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "plastic-image": "^3.0.2",
     "pwa-helpers": "^0.9.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tslib": "^2.6.1"
   },
   "devDependencies": {
     "@firebase/testing": "^0.20.11",
