--- a/data/settings.json
+++ b/data/settings.json
@@ -24,6 +24,16 @@
       "label": "Home"
     },
     {
+      "route": "schedule",
+      "permalink": "/schedule",
+      "label": "Schedule"
+    },
+    {
+      "route": "speakers",
+      "permalink": "/speakers",
+      "label": "Speakers"
+    },
+    {
       "route": "team",
       "permalink": "/team",
       "label": "Team"
@@ -31,7 +41,7 @@
   ],
   "heroSettings": {
     "home": {
-      "description": "Join the commuity, learn new things!",
+      "description": "Join the community, learn new things!",
       "background": {
         "color": "#673ab7",
         "image": "/images/backgrounds/home.png"
@@ -40,8 +50,8 @@
     },
     "speakers": {
       "title": "Speakers",
-      "metaDescription": "Hear from the Googlers, Partners, and Guest Speakers who are building the future of cloud. Check back often as we add more speakers, including our customers and partners.",
-      "description": "Hear from the Googlers, Partners, and Guest Speakers who are building the future of cloud. Check back often as we add more speakers, including our customers and partners.",
+      "metaDescription": "",
+      "description": "",
       "background": {
         "color": "#FFF"
       },
@@ -89,10 +99,21 @@
     }
   },
   "location": {
-    "label": "Location",
-    "name": "Berlin",
+    "label": "Humboldt-Universität zu Berlin",
+    "name": "Humboldt-Universität zu Berlin",
     "city": "Berlin",
-    "short": "Berlin"
+    "short": "Berlin, Germany",
+    "address": "Unter den Linden, 6",
+    "pointer": {
+      "latitude": 52.517883,
+      "longitude": 13.3936551,
+      "zoom": 14
+    },
+    "mapCenter": {
+      "latitude": 52.51,
+      "longitude": 13.39
+    },
+    "description": "A Prussian liberal arts university now offering varied courses & alma mater of 29 Nobel laureates"
   },
   "mediaQueries": {
     "xs": {
