--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -59,7 +59,7 @@
       "dateReadable": "November 25",
       "timeslots": [
         {
-          "startTime": "09:00",
+          "startTime": "08:30",
           "endTime": "10:00",
           "sessions": [
             {
@@ -87,9 +87,11 @@
               "items": ["109"]
             },
             {
+              "extend": 2,
               "items": ["114"]
             },
             {
+              "extend": 2,
               "items": ["120"]
             }
           ]
@@ -103,12 +105,6 @@
             },
             {
               "items": ["110"]
-            },
-            {
-              "items": ["114"]
-            },
-            {
-              "items": ["120"]
             }
           ]
         },
@@ -132,9 +128,11 @@
               "items": ["104"]
             },
             {
+              "extend": 2,
               "items": ["120"]
             },
             {
+              "extend": 2,
               "items": ["120"]
             }
           ]
@@ -148,12 +146,6 @@
             },
             {
               "items": ["106"]
-            },
-            {
-              "items": ["120"]
-            },
-            {
-              "items": ["120"]
             }
           ]
         },
@@ -177,9 +169,11 @@
               "items": ["120"]
             },
             {
+              "extend": 3,
               "items": ["120"]
             },
             {
+              "extend": 3,
               "items": ["103"]
             }
           ]
@@ -192,13 +186,8 @@
               "items": ["107"]
             },
             {
+              "extend": 2,
               "items": ["102"]
-            },
-            {
-              "items": ["120"]
-            },
-            {
-              "items": ["103"]
             }
           ]
         },
@@ -208,15 +197,6 @@
           "sessions": [
            {
               "items": ["120"]
-            },
-            {
-              "items": ["102"]
-            },
-            {
-              "items": ["120"]
-            },
-            {
-              "items": ["103"]
             }
           ]
         },
@@ -238,12 +218,6 @@
             },
             {
               "items": ["120"]
-            },
-            {
-              "items": ["120"]
-            },
-            {
-              "items": ["120"]
             }
           ]
         },
@@ -251,12 +225,6 @@
           "startTime": "17:10",
           "endTime": "17:30",
           "sessions": [
-            {
-              "items": ["120"]
-            },
-            {
-              "items": ["120"]
-            },
             {
               "items": ["120"]
             },
