--- a/data/settings.json
+++ b/data/settings.json
@@ -99,21 +99,21 @@
     }
   },
   "location": {
-    "label": "Humboldt-Universität zu Berlin",
-    "name": "Humboldt-Universität zu Berlin",
+    "label": "Hedwig-Dohm-Haus",
+    "name": "Hedwig-Dohm-Haus",
     "city": "Berlin",
     "short": "Berlin, Germany",
-    "address": "Unter den Linden, 6",
+    "address": "Ziegelstraße 5",
     "pointer": {
-      "latitude": 52.517883,
-      "longitude": 13.3936551,
+      "latitude": 52.5207124,
+      "longitude": 13.391217,
       "zoom": 14
     },
     "mapCenter": {
-      "latitude": 52.51,
+      "latitude": 52.52,
       "longitude": 13.39
     },
-    "description": "A Prussian liberal arts university now offering varied courses & alma mater of 29 Nobel laureates"
+    "description": ""
   },
   "mediaQueries": {
     "xs": {
